[package]
name = "tabfile"
version = "0.2.1"
authors = ["Jörn Bethune"]
edition = "2018"
description = "A simple Rust library to read tab-delimited data"
license = "LGPL-3.0"
repository = "https://github.com/jbethune/tabfile"
readme = "README.md"
keywords = ["plaintext", "file", "tab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tempfile = "3"
